fixed alignment

--- a/app/lloyd/static/css/agency.css
+++ b/app/lloyd/static/css/agency.css
@@ -301,7 +301,7 @@ header .intro-text .intro-heading {
 }
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 300px;
+    padding-top: 120px;
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in {
